--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
 appdirs==1.4.3
+astroid==1.6.2
+backports.functools-lru-cache==1.5
+configparser==3.5.0
 Django==1.10.6
+enum34==1.1.6
+futures==3.2.0
+gunicorn==19.7.1
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 packaging==16.8
-psycopg2==2.7.1
+psycopg2==2.7.4
+pylint==1.8.3
 pyparsing==2.2.0
+singledispatch==3.4.0.3
 six==1.10.0
+whitenoise==3.3.1
+wrapt==1.10.11
