--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
 appdirs==1.4.3
-astroid==1.6.2
-backports.functools-lru-cache==1.5
-configparser==3.5.0
+backcall==0.1.0
+decorator==4.2.1
 Django==1.10.6
-enum34==1.1.6
-futures==3.2.0
-gunicorn==19.7.1
-isort==4.3.4
-lazy-object-proxy==1.3.1
-mccabe==0.6.1
+ipdb==0.11
+ipython==6.3.0
+ipython-genutils==0.2.0
+jedi==0.11.1
 packaging==16.8
+parso==0.1.1
+pexpect==4.4.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
 psycopg2==2.7.4
-pylint==1.8.3
+psycopg2-binary==2.7.4
+ptyprocess==0.5.2
+Pygments==2.2.0
 pyparsing==2.2.0
-singledispatch==3.4.0.3
+simplegeneric==0.8.1
 six==1.10.0
-whitenoise==3.3.1
-wrapt==1.10.11
+traitlets==4.3.2
+wcwidth==0.1.7
