--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.3
 backcall==0.1.0
 decorator==4.2.1
 Django==1.10.6
+gunicorn==19.7.1
 ipdb==0.11
 ipython==6.3.0
 ipython-genutils==0.2.0
