--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,14 @@ isort==4.3.4
 jedi==0.11.1
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+memoized==0.3
 numpy==1.14.5
 packaging==16.8
 pandas==0.23.1
 parso==0.1.1
 pexpect==4.4.0
 pickleshare==0.7.4
+Pillow==5.2.0
 prompt-toolkit==1.0.15
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
