--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 appdirs==1.4.3
 astroid==1.6.5
 backcall==0.1.0
+certifi==2018.8.24
+chardet==3.0.4
 decorator==4.2.1
 Django==1.10.6
 django-extensions==2.1.0
+dug==0.1.0
 flake8==3.5.0
 gunicorn==19.7.1
+idna==2.7
 ipdb==0.11
 ipython==6.3.0
 ipython-genutils==0.2.0
@@ -33,8 +37,11 @@ pylint==1.9.2
 pyparsing==2.2.0
 python-dateutil==2.7.3
 pytz==2018.5
+requests==2.19.1
 simplegeneric==0.8.1
 six==1.10.0
+tqdm==4.26.0
 traitlets==4.3.2
+urllib3==1.23
 wcwidth==0.1.7
 wrapt==1.10.11
